--- a/experiments/0/comparison.ipynb
+++ b/experiments/0/comparison.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "dbef929f-73ff-49fc-83ed-54a1c01b4791",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "e384814c-d103-4935-a301-c8455af9cc37",
    "metadata": {},
    "outputs": [
@@ -174,7 +174,7 @@
        "3      7.171456e+03  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "446be191-934a-4c7c-ae8b-3c6a7b46d832",
    "metadata": {},
    "outputs": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "1de0b287-1bb1-4a7f-a609-9ce76e4dc828",
    "metadata": {},
    "outputs": [
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "03c05273-6bea-4504-a59b-43eb9a4014d5",
    "metadata": {},
    "outputs": [],
@@ -350,7 +350,7 @@
     "def leaderboard(objects: dict, metrics: list[tuple[str, bool]]) -> dict:\n",
     "    results = {}\n",
     "    for (metric, higher_is_better) in metrics:\n",
-    "        round_points = assign_points(objects, metric)\n",
+    "        round_points = assign_points(objects, metric, higher_is_better)\n",
     "        print(round_points)\n",
     "        results = update_points(results, round_points)\n",
     "    return results"
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "2d35aa45-5d3e-47f3-a248-a99ff5461277",
    "metadata": {},
    "outputs": [],
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "bc08d114-8a60-4f7c-9b7d-347714e5a5e0",
    "metadata": {},
    "outputs": [
@@ -386,19 +386,19 @@
       "{'ql-mono-default-as': 1, 'ql-mono-default-p': 2, 'ql-mono-default-dwt': 3, 'ql-mono-default-ql': 5}\n",
       "{'ql-mono-default-as': 1, 'ql-mono-default-p': 2, 'ql-mono-default-dwt': 3, 'ql-mono-default-ql': 5}\n",
       "{'ql-mono-default-as': 1, 'ql-mono-default-p': 2, 'ql-mono-default-ql': 3, 'ql-mono-default-dwt': 5}\n",
-      "{'ql-mono-default-ql': 1, 'ql-mono-default-dwt': 2, 'ql-mono-default-as': 3, 'ql-mono-default-p': 5}\n"
+      "{'ql-mono-default-p': 1, 'ql-mono-default-as': 2, 'ql-mono-default-dwt': 3, 'ql-mono-default-ql': 5}\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'ql-mono-default-ql': 14,\n",
-       " 'ql-mono-default-dwt': 13,\n",
-       " 'ql-mono-default-as': 6,\n",
-       " 'ql-mono-default-p': 11}"
+       "{'ql-mono-default-p': 7,\n",
+       " 'ql-mono-default-as': 5,\n",
+       " 'ql-mono-default-dwt': 14,\n",
+       " 'ql-mono-default-ql': 18}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
