--- a/experiments/1/history.ipynb
+++ b/experiments/1/history.ipynb
@@ -271,13 +271,13 @@
       "{'dqn': 1, 'ppo': 2, 'fixed': 3, 'ql': 5}\n",
       "{'dqn': 1, 'ppo': 2, 'fixed': 3, 'ql': 5}\n",
       "{'dqn': 1, 'ppo': 2, 'fixed': 3, 'ql': 5}\n",
-      "{'ql': 1, 'fixed': 2, 'ppo': 3, 'dqn': 5}\n"
+      "{'dqn': 1, 'ppo': 2, 'fixed': 3, 'ql': 5}\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'ql': 16, 'fixed': 11, 'ppo': 9, 'dqn': 8}"
+       "{'dqn': 4, 'ppo': 8, 'fixed': 12, 'ql': 20}"
       ]
      },
      "execution_count": 4,
@@ -319,7 +319,7 @@
     "def leaderboard(objects: dict, metrics: list[tuple[str, bool]]) -> dict:\n",
     "    results = {}\n",
     "    for (metric, higher_is_better) in metrics:\n",
-    "        round_points = assign_points(objects, metric)\n",
+    "        round_points = assign_points(objects, metric, higher_is_better)\n",
     "        print(round_points)\n",
     "        results = update_points(results, round_points)\n",
     "    return results\n",
