--- a/experiments/2/history.ipynb
+++ b/experiments/2/history.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "c2836cc3-52aa-4726-b228-70da9c5b4247",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "a37fb5bc-e55d-4f40-84f5-3c5497c3fcd2",
    "metadata": {},
    "outputs": [
@@ -104,7 +104,7 @@
        "   2879.102704788275]}}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "77a496ab-918e-4975-acc4-1315b8c5437b",
    "metadata": {},
    "outputs": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "a8cd348d-7d87-4b4a-aec8-cb58a31952f4",
    "metadata": {},
    "outputs": [
@@ -287,16 +287,16 @@
       "{'dqn': 1, 'fixed': 2, 'ppo': 3, 'ql': 5}\n",
       "{'dqn': 1, 'fixed': 2, 'ppo': 3, 'ql': 5}\n",
       "{'dqn': 1, 'fixed': 2, 'ppo': 3, 'ql': 5}\n",
-      "{'ql': 1, 'ppo': 2, 'fixed': 3, 'dqn': 5}\n"
+      "{'dqn': 1, 'fixed': 2, 'ppo': 3, 'ql': 5}\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'ql': 16, 'ppo': 11, 'fixed': 9, 'dqn': 8}"
+       "{'dqn': 4, 'fixed': 8, 'ppo': 12, 'ql': 20}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +335,7 @@
     "def leaderboard(objects: dict, metrics: list[tuple[str, bool]]) -> dict:\n",
     "    results = {}\n",
     "    for (metric, higher_is_better) in metrics:\n",
-    "        round_points = assign_points(objects, metric)\n",
+    "        round_points = assign_points(objects, metric, higher_is_better)\n",
     "        print(round_points)\n",
     "        results = update_points(results, round_points)\n",
     "    return results\n",
