--- a/experiments/3/history.ipynb
+++ b/experiments/3/history.ipynb
@@ -136,7 +136,7 @@
     "        for idx, row in df.iterrows():\n",
     "            objects[row['ID'].split('-')[2]] = {\n",
     "                metric: row[metric]\n",
-    "                for metric in ['arrival_rate_mean', 'departure_rate_mean', 'speed_mean', 'waiting_time_mean']\n",
+    "                for metric in ['arrival_rate_mean', 'departure_rate_mean', 'speed_mean', 'accumulated_waiting_time_mean', 'waiting_time_mean']\n",
     "            }\n",
     "        return objects\n",
     "\n",
@@ -290,35 +290,26 @@
     "        matplotlib.pyplot.show()\n",
     "\n",
     "\n",
-    "plot_metrics(rounds, ['arrival_rate_mean', 'departure_rate_mean', 'speed_mean', 'waiting_time_mean'], mean=False)\n",
-    "bar_metrics(rounds, ['arrival_rate_mean', 'departure_rate_mean', 'speed_mean', 'waiting_time_mean'])"
+    "plot_metrics(rounds, ['arrival_rate_mean', 'departure_rate_mean', 'speed_mean', 'accumulated_waiting_time_mean', 'waiting_time_mean'], mean=False)\n",
+    "bar_metrics(rounds, ['arrival_rate_mean', 'departure_rate_mean', 'speed_mean', 'accumulated_waiting_time_mean', 'waiting_time_mean'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "a8cd348d-7d87-4b4a-aec8-cb58a31952f4",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'svd': 1, 'sv': 2, 'svq': 3, 'svp': 5, 'default': 8}\n",
-      "{'svd': 1, 'sv': 2, 'svq': 3, 'svp': 5, 'default': 8}\n",
-      "{'svd': 1, 'sv': 2, 'svq': 3, 'svp': 5, 'default': 8}\n",
-      "{'sv': 1, 'svd': 2, 'svq': 3, 'svp': 5, 'default': 8}\n"
+     "ename": "NameError",
+     "evalue": "name 'rounds' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 39\u001b[0m\n\u001b[1;32m     36\u001b[0m         results \u001b[38;5;241m=\u001b[39m update_points(results, round_points)\n\u001b[1;32m     37\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m results\n\u001b[0;32m---> 39\u001b[0m leaderboard(\u001b[43mrounds\u001b[49m, [\n\u001b[1;32m     40\u001b[0m     (\u001b[38;5;124m'\u001b[39m\u001b[38;5;124marrival_rate_mean\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;28;01mTrue\u001b[39;00m),\n\u001b[1;32m     41\u001b[0m     (\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdeparture_rate_mean\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;28;01mTrue\u001b[39;00m),\n\u001b[1;32m     42\u001b[0m     (\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mspeed_mean\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;28;01mTrue\u001b[39;00m),\n\u001b[1;32m     43\u001b[0m     (\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mwaiting_time_mean\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;28;01mFalse\u001b[39;00m),\n\u001b[1;32m     44\u001b[0m     (\u001b[38;5;124m'\u001b[39m\u001b[38;5;124maccumulated_waiting_time_mean\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[1;32m     45\u001b[0m ])\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'rounds' is not defined"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'sv': 7, 'svd': 5, 'svq': 12, 'svp': 20, 'default': 32}"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -364,7 +355,8 @@
     "    ('arrival_rate_mean', True),\n",
     "    ('departure_rate_mean', True),\n",
     "    ('speed_mean', True),\n",
-    "    ('waiting_time_mean', False)\n",
+    "    ('waiting_time_mean', False),\n",
+    "    ('accumulated_waiting_time_mean', False)\n",
     "])"
    ]
   }
@@ -385,7 +377,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
