--- a/experiments/6/history.ipynb
+++ b/experiments/6/history.ipynb
@@ -76,7 +76,7 @@
     "        for idx, row in df.iterrows():\n",
     "            objects[row['ID'].split('-')[-1]] = {\n",
     "                metric: row[metric]\n",
-    "                for metric in ['arrival_rate_mean', 'departure_rate_mean', 'speed_mean', 'waiting_time_mean']\n",
+    "                for metric in ['arrival_rate_mean', 'departure_rate_mean', 'speed_mean', 'accumulated_waiting_time_mean', 'waiting_time_mean']\n",
     "            }\n",
     "        return objects\n",
     "\n",
@@ -230,8 +230,8 @@
     "        matplotlib.pyplot.show()\n",
     "\n",
     "\n",
-    "plot_metrics(rounds, ['arrival_rate_mean', 'departure_rate_mean', 'speed_mean', 'waiting_time_mean'], mean=False)\n",
-    "bar_metrics(rounds, ['arrival_rate_mean', 'departure_rate_mean', 'speed_mean', 'waiting_time_mean'])"
+    "plot_metrics(rounds, ['arrival_rate_mean', 'departure_rate_mean', 'speed_mean', 'accumulated_waiting_time_mean', 'waiting_time_mean'], mean=False)\n",
+    "bar_metrics(rounds, ['arrival_rate_mean', 'departure_rate_mean', 'speed_mean', 'accumulated_waiting_time_mean', 'waiting_time_mean'])"
    ]
   },
   {
@@ -304,7 +304,8 @@
     "    ('arrival_rate_mean', True),\n",
     "    ('departure_rate_mean', True),\n",
     "    ('speed_mean', True),\n",
-    "    ('waiting_time_mean', False)\n",
+    "    ('waiting_time_mean', False),\n",
+    "    ('accumulated_waiting_time_mean', False)\n",
     "])"
    ]
   }
@@ -325,7 +326,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
